--- a/Minimus.csproj
+++ b/Minimus.csproj
@@ -58,10 +58,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\Password.cs" />
+    <Compile Include="Models\DifficultyEnum.cs" />
     <Compile Include="Models\Country.cs" />
     <Compile Include="Models\Forecast.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\Weather.cs" />
+    <Compile Include="Builder\PasswordFluentBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Proxy\IProxyCountry.cs" />
